--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,8 @@ var/
 .installed.cfg
 *.egg
 *.swp
+*.p
+*.pdf
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
